Fixes dark mode text

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -217,6 +217,10 @@ $enable-gradients: true;
     border-color: $default-border !important;
   }
 
+  .text-black-50 {
+    @extend .text-white-50;
+  }
+
   .dashboard-lesson,
   .substitution-lesson {
     @extend .text-white-50;
